Add `check` and `uncheck` helper methods
This commit implement's Capybara's [`#check`][check] and
[`#uncheck`][uncheck] methods.

Neither of the original methods act upon a locator argument, so their
implementation is a direct delegation to the underlying
[`Capybara::Session`][session].

[check]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Node/Actions#check-instance_method
[uncheck]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Node/Actions#uncheck-instance_method
[session]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Session

--- a/test/dummy/app/views/widgets/new.html.erb
+++ b/test/dummy/app/views/widgets/new.html.erb
@@ -24,4 +24,20 @@
     "Good",
     "Great",
   ], {}, multiple: true) %>
+
+  <hr>
+
+  <%= form.label(:checkbox_field) %>
+  <%= form.collection_check_boxes(
+    :checkbox_field,
+    [
+      "Ruby",
+      "Java",
+    ],
+    :to_s,
+    :to_s,
+  ) do |builder| %>
+    <%= builder.label %>
+    <%= builder.check_box(checked: builder.value == "Java") %>
+  <% end %>
 <% end %>
