Add `choose` helper method
This commit implement's Capybara's [`#choose`][choose] method.

The original method does not act upon a locator argument, so its
implementation is a direct delegation to the underlying
[`Capybara::Session`][session].

[choose]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Node/Actions#choose-instance_method
[session]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Session

--- a/test/dummy/app/views/widgets/new.html.erb
+++ b/test/dummy/app/views/widgets/new.html.erb
@@ -40,4 +40,17 @@
     <%= builder.label %>
     <%= builder.check_box(checked: builder.value == "Java") %>
   <% end %>
+
+  <hr>
+
+  <%= form.label(:radio_field) %>
+  <%= form.collection_radio_buttons(
+    :radio_field,
+    [
+      "Up",
+      "Down",
+    ],
+    :to_s,
+    :to_s,
+  ) %>
 <% end %>
