--- a/test/dummy/app/views/widgets/new.html.erb
+++ b/test/dummy/app/views/widgets/new.html.erb
@@ -29,6 +29,12 @@
 
   <hr>
 
+  <%= form.label(:single_checkbox_field) %>
+  <%= form.check_box(:single_checkbox_field) %>
+
+  <%= form.label(:checked_single_checkbox_field) %>
+  <%= form.check_box(:checked_single_checkbox_field, checked: true) %>
+
   <%= form.label(:checkbox_field) %>
   <%= form.collection_check_boxes(
     :checkbox_field,
