--- a/test/dummy/app/views/widget_records/new.html.erb
+++ b/test/dummy/app/views/widget_records/new.html.erb
@@ -5,4 +5,5 @@
   <%= form.text_field(:text_field) %>
 
   <%= form.submit %>
+  <%= form.submit translate("helpers.submit.widget_record.submit")%>
 <% end %>
