--- a/test/dummy/app/views/widgets/new.html.erb
+++ b/test/dummy/app/views/widgets/new.html.erb
@@ -62,4 +62,6 @@
   <%= form.file_field(:file_field) %>
 
   <%= form.submit %>
+
+  <%= form.submit translate("helpers.submit.widget.create") %>
 <% end %>
