Improve `type="checkbox"` tests and guides
This commit improves support for `check` and `uncheck` calls to
`with_form(model:)` invocations that are passed `ActiveRecord::Base`
instances.

To support this, add migrations to add a `Boolean` column to the
`widget_records` table, a new `Tag` model and table to be associated
to `Widget` records through the `Tagging` model and table.

--- a/test/dummy/app/views/widget_records/new.html.erb
+++ b/test/dummy/app/views/widget_records/new.html.erb
@@ -1,12 +1,5 @@
 <%= flash.notice %>
 
 <%= form_with(model: widget_record) do |form| %>
-  <%= form.label(:text_field) %>
-  <%= form.text_field(:text_field) %>
-
-  <%= form.label(:boolean_check_box_field) %>
-  <%= form.check_box(:boolean_check_box_field) %>
-
-  <%= form.submit %>
-  <%= form.submit translate("helpers.submit.widget_record.submit")%>
+  <%= render(form) %>
 <% end %>
