--- a/test/dummy/app/views/widget_records/edit.html.erb
+++ b/test/dummy/app/views/widget_records/edit.html.erb
@@ -1,10 +1,5 @@
 <%= flash.notice %>
 
 <%= form_with(model: widget_record) do |form| %>
-  <%= form.label(:text_field) %>
-  <%= form.text_field(:text_field) %>
-
-  <%= form.submit %>
-
-  <%= form.submit translate("helpers.submit.widget_record.submit") %>
+  <%= render(form) %>
 <% end %>
